fix(form:object): fix misalignment (#1037)

--- a/packages/theme/system/delon/_sf.less
+++ b/packages/theme/system/delon/_sf.less
@@ -9,7 +9,6 @@
   // 固定 label
   &__fixed {
     display: flex;
-    flex-flow: row;
   }
   &__title {
     margin-bottom: 8px;
